[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinnitus-search"
version = "0.1.0"
description = "A semantic search engine for Python codebases using AST analysis and vector embeddings"
readme = "README.md"
authors = [
    { name = "KiloCode Agent", email = "kilocode@example.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.0.0",
    "typer>=0.9.0",
    "tqdm>=4.60.0",
    "filelock>=3.0.0",
    "pydantic>=2.0.0",
    "pathspec>=0.11.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[project.scripts]
tinnitus-search = "tinnitus_search.cli:app"
[tool.setuptools.packages.find]
where = ["."]
include = ["tinnitus_search*"]